// for syntax highlighting we use proto3 version

syntax="proto3";

// path to our current folder, where the generated files will be placed
option go_package = "./proto";

// package name for our proto file
package greet_service;

// defining all the Services for the gRPC
service GreetService {
    // simple unary RPC
    rpc Product(NoParam) returns (ProductResponse);
    // server streaming RPC
    rpc ProductServerStreaming(NamesList) returns (stream ProductResponse);
    // client streaming RPC
    rpc ProductClientStreaming(stream ProductRequest) returns (MessagesList);
    // bidirectional streaming RPC
    rpc ProductBidirectionalStreaming(stream ProductRequest) returns (stream ProductResponse);
}

// when you are not passing any params still you will need to add a type
// NoParam acts as a type for no parameters given.
message NoParam {};

message ProductRequest {
    string name = 1;
}

message ProductResponse {
    string message = 1;
}

message NamesList {
    repeated string names = 1;
}

message MessagesList {
    repeated string messages = 1;
}